fix: figures will be stretched and not centered on mobile

--- a/assets/tufted.css
+++ b/assets/tufted.css
@@ -40,6 +40,8 @@ img,
 svg {
     max-width: 100%;
     max-height: 80vh;
+    height: auto;
+    width: auto;
 }
 
 /* 
@@ -429,6 +431,8 @@ RESPONSIVE LAYOUT
         max-width: 100%;
         left: 0;
         transform: none;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     section>table {
